<resources>
    <string name="app_name">Online Course and E-Learning App</string>
    <string name="app_logo">App Logo</string>
    <string name="facebook_app_id">1270279474247537</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="onboarding_content_description">onBoarding</string>
    <string name="tvOnboarding1"><![CDATA[We provide the best learning courses & great mentors!]]></string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvOnboarding2">Learn anytime and anywhere easily and conveniently</string>
    <string name="tvOnboarding3">Let\'s improve your skills together with Elera right now!</string>
    <string name="imageview">ImageView</string>
    <string name="tvSignupLogin">Let\'s you in</string>
    <string name="btn_facebook">Continue with Facebook</string>
    <string name="btn_google">Continue with Google</string>
    <string name="btn_apple">Continue with Apple</string>
    <string name="or">or</string>
    <string name="btnSign_in">Sign in with password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="back_button">back button</string>
    <string name="tvSignup">Create your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="btnSign_up">Sign up</string>
    <string name="orContinue">or continue with</string>
    <string name="sign_in">Sign in</string>
    <string name="have_account">Already have an account</string>
    <string name="tvSignIn">Login to your Account</string>
    <string name="forgot_pass">Forgot the password?</string>
    <string name="default_web_client_id">943534388733-jjsgre3hdgeu2uurg5n5qj8cq42k9mlf.apps.googleusercontent.com</string>
    <string name="tvForgotPassword">Forgot Password</string>
    <string name="tvForgotPasswordEmail">Please select how would you like to receive the verification code</string>
    <string name="btnContinue">Continue</string>
    <string name="resend_code">Resend code in 59s</string>
    <string name="btnVerify">Verify</string>
    <string name="tvCodeSent">Code has been send to</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="congratulation">Congratulations!</string>
    <string name="successMessage">Your password was changed successfully.You will be redirected to the Login page in a few seconds.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sms">SMS</string>
    <string name="btnSendCode">Send Code</string>
    <string name="tv_home_greeting">Good Morning</string>
    <string name="search">Search</string>
    <string name="tv_see_all">See All</string>
    <string name="tv_top_mentors">Top Mentors</string>
    <string name="tv_most_popular_courses">Most Popular Courses</string>
    <string name="tv_user_name">User Name</string>
    <string name="home">Home</string>
    <string name="my_courses">My Courses</string>
    <string name="profile">Profile</string>
    <string name="transactions">Transactions</string>
    <string name="inbox">Inbox</string>
    <string name="tv_mentor_name">Mentor Name</string>
    <string name="tv_course_category">Course Category</string>
    <string name="tv_course_name">Course Name</string>
    <string name="tv_course_current_price">$39.99</string>
    <string name="tv_course_actual_price">$79.00</string>
    <string name="tv_course_rating">4.8</string>
    <string name="tv_course_students_no">8.259 students</string>
    <string name="course_photo">Course Photo</string>
    <string name="tv_item_sub_title">40% OFF</string>
    <string name="tv_item_main_title">Today\'s Special</string>
    <string name="tv_item_description">Get a discount for every course order! Only valid for today!</string>
    <string name="tv_item_ad_discount">40%</string>
    <string name="tv_course_reviews_no">(4.479 reviews)</string>
    <string name="tv_course_hours">2.5 Hours</string>
    <string name="tv_certificate">Certificate</string>
    <string name="tv_mentor">Mentor</string>
    <string name="tv_mentor_job_title">Mentor Job Title</string>
    <string name="tv_about_course">About Course</string>
    <string name="tv_course_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="tv_course_tools">Tools</string>
    <string name="enroll_course">Enroll Course</string>
    <string name="delete_recent_search">delete recent search</string>
    <string name="write_review">Write your review here</string>
    <string name="delete_review">delete review</string>
    <string name="back">back</string>
    <string name="no_courses_found_for_the_selected_category">No courses found for the selected category</string>
    <string name="student_profile">Student Profile</string>
    <string name="edit_photo">edit photo</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="certificate_completion">Certificate of Completion</string>
    <string name="presented">Presented to</string>
    <string name="student_name">Student Name</string>
    <string name="successful_completion">For the successful completion of</string>
    <string name="certificate_date">Issued on December 20, 2024</string>
    <string name="certificate_id">Id : SK123456789</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="user_photo">user photo</string>
    <string name="last_message">"Hello, Good morning "</string>
    <string name="incoming">Incoming\n</string>
    <string name="call_date">Dec 19, 2024</string>
    <string name="call_icon">Call icon</string>
    <string name="send">send</string>
    <string name="type_a_message">Type a message...</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
</resources>