<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutCourseFragment">


    <TextView
        android:id="@+id/tv_mentor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        android:text="@string/tv_mentor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_course_mentor"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mentor">

        <ImageView
            android:id="@+id/iv_course_mentor_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/tv_top_mentors"
            android:scaleType="centerCrop"
            android:src="@drawable/head_icon" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_mentor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        android:text="@string/tv_mentor_name"
        app:layout_constraintStart_toEndOf="@+id/cv_course_mentor"
        app:layout_constraintTop_toTopOf="@+id/cv_course_mentor"
        />

    <TextView
        android:id="@+id/tv_mentor_job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:text="@string/tv_mentor_job_title"
        app:layout_constraintStart_toEndOf="@+id/cv_course_mentor"
        app:layout_constraintTop_toBottomOf="@+id/tv_mentor_name"
        />


    <ImageView
        android:id="@+id/iv_course_mentor_chat"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/tv_top_mentors"
        android:scaleType="centerCrop"
        android:src="@drawable/chat_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_mentor_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_about_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        android:text="@string/tv_about_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_course_mentor"
        />

    <TextView
        android:id="@+id/tv_course_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:text="@string/tv_course_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_course"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        android:text="@string/tv_course_tools"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_course_description"
        />

    <TextView
        android:id="@+id/tv_course_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        android:text="@string/tv_course_tools"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tools"
        />


    <Button
        android:id="@+id/btn_enroll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/enroll_course"
        android:textColor="@color/btn_text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_course_tools"/>

</androidx.constraintlayout.widget.ConstraintLayout>