<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/certificate_background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/app_logo"
            android:background="@drawable/app_logo_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/tv_certificate_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/certificate_completion"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@+id/ivAppLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_presented"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/presented"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_certificate_completion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_presented"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_successful_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/successful_completion"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_student_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_course_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_successful_completion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_certificate_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/certificate_date"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_course_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_certificate_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/certificate_id"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_certificate_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



        <ImageView
            android:id="@+id/iv_signature"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/signature"
            app:layout_constraintTop_toBottomOf="@+id/tv_certificate_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_mentor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_mentor_name"
            android:textStyle="bold"
            android:textColor="@color/btn_color"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_signature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>