<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:elevation="0dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_item_call_student_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/head_icon"
            android:contentDescription="@string/user_photo"
            />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_item_call_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/student_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_user_photo"
        />


    <TextView
        android:id="@+id/item_call_received_status"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/incoming"
        android:textColor="@color/gray"
        app:drawableStartCompat="@drawable/baseline_call_received_24"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_call_user_name"
        app:layout_constraintStart_toEndOf="@+id/cv_user_photo"/>


    <TextView
        android:id="@+id/item_call_separate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="|"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/item_call_received_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_call_user_name"
        />


    <TextView
        android:id="@+id/item_call_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/call_date"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/item_call_separate"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_call_user_name"
        />


    <ImageView
        android:id="@+id/item_call_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/call_icon"
        android:src="@drawable/call_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>