<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">





    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_sign_in"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_button"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignIn_sign_in"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvSignIn"
        android:textAlignment="textStart"
        android:textColor="@color/primary_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_sign_in" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_bg"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="12dp"
        android:elevation="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn_sign_in" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_bg"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawableEnd="@drawable/ic_eye_closed"
        android:drawablePadding="12dp"
        android:elevation="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail_sign_in" />


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbRememberMe_sign_in"
        style="@style/Widget.App.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableTint="@color/white"
        android:text="@string/rememberMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword_sign_in" />


    <Button
        android:id="@+id/btn_Sign_In"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/sign_in"
        android:textColor="@color/btn_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRememberMe_sign_in" />




    <TextView
        android:id="@+id/tvForgotPass_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/btn_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_Sign_In"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <LinearLayout
        android:id="@+id/ll_Or_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPass_sign_in">



        <View
            android:id="@+id/vFirst_sign_in"
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_marginEnd="20dp"
            android:background="@color/vColor" />

        <TextView
            android:id="@+id/tvOrContinue_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orContinue"
            android:textColor="@color/primary_color"
            android:textSize="18sp"/>

        <View
            android:id="@+id/vSecond_sign_in"
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:background="@color/vColor" />




    </LinearLayout>


    <LinearLayout
        android:id="@+id/llButtons_sign_in"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ll_Or_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignupFacebook_sign_in"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/btn_signup_login_color"
            android:elevation="4dp"
            android:contentDescription="@string/btn_facebook"
            android:clickable="true"
            android:focusable="true"
            app:cornerRadius="14dp"
            app:icon="@drawable/facebook"
            app:iconSize="30dp"
            app:iconTint="@null"
            app:strokeColor="@color/btn_signupLogin_Stroke"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignupGoogle_sign_in"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/btn_signup_login_color"
            android:elevation="4dp"
            android:contentDescription="@string/btn_google"
            android:clickable="true"
            android:focusable="true"
            app:cornerRadius="14dp"
            app:icon="@drawable/google"
            app:iconSize="40dp"
            app:iconTint="@null"
            app:strokeColor="@color/btn_signupLogin_Stroke"
            app:strokeWidth="2sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignupApple_sign_in"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/btn_signup_login_color"
            android:elevation="4dp"
            android:contentDescription="@string/btn_apple"
            android:clickable="true"
            android:focusable="true"
            app:cornerRadius="14dp"
            app:icon="@drawable/apple"
            app:iconSize="30dp"
            app:iconTint="@null"
            app:strokeColor="@color/btn_signupLogin_Stroke"
            app:strokeWidth="2dp" />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llButtons_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/tvNoAccount_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/secondary_color"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUpNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:padding="0dp"
            android:text="@string/sign_up"
            android:textColor="@color/tv_sign_up"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>










</androidx.constraintlayout.widget.ConstraintLayout>